RESOLVED FIXED190192
[GStreamer][playbin3] Stream tag lists leaks
https://bugs.webkit.org/show_bug.cgi?id=190192
Summary [GStreamer][playbin3] Stream tag lists leaks
Philippe Normand
Reported 2018-10-02 01:40:00 PDT
Will attach a patch...
Attachments
Patch (4.67 KB, patch)
2018-10-02 01:46 PDT, Philippe Normand
calvaris: review+
Philippe Normand
Comment 1 2018-10-02 01:46:43 PDT
Thibault Saunier
Comment 2 2018-10-02 02:10:21 PDT
Comment on attachment 351356 [details] Patch Informal r+
Philippe Normand
Comment 3 2018-10-02 02:44:09 PDT
Radar WebKit Bug Importer
Comment 4 2018-10-02 02:45:22 PDT
Note You need to log in before you can comment on or make changes to this bug.